# hydrologis_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
hydrologis_utils/: __init__.py  color_utils.py  db_utils.py  file_utils.py  geojson_utils.py  geom_utils.py  multithreading.py  os_utils.py  proj_utils.py  render_utils.py  string_utils.py  time_utils.py
hydrologis_utils/file/: __init__.py
hydrologis_utils/strings/: __init__.py  utils.py
tests/: __init__.py  test_color_utils.py  test_db_utils.py  test_file_utils.py  test_geojson.py  test_geom_utils.py  test_multithreading.py  test_proj.py  test_render_utils.py  test_string_utils.py  test_strings.py  test_time_utils.py
tests/samples/: gdal_sample.gpkg
