[project]
name = "hydrologis_utils"
version = "0.1.5"
description = "HydroloGIS Utils Library."
authors = [
    {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
]
dependencies = [
    "greenlet>=2.0.2",
    "packaging>=23.1",
    "psycopg2-binary>=2.9.7",
    "pyparsing>=3.1.1",
    "Shapely>=2.0.1",
    "SQLAlchemy>=2.0.21",
    "GeoAlchemy2>=0.14.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
