[project]
name = "hydrologis_utils"
version = "0.2.0"
description = "HydroloGIS Utils Library."
authors = [
    {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
]
dependencies = [
    "greenlet>=3.1.1",
    "packaging>=24.2",
    "psycopg2-binary>=2.9.10",
    "pyparsing>=3.2.1",
    "Shapely>=2.0.6",
    "SQLAlchemy>=2.0.37",
    "GeoAlchemy2>=0.17.0",
    "geojson>=3.2.0",
    "pyproj>=3.7.0",
    "Pillow>=11.1.0",
    "requests>=2.32.4",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
